@@ -67,28 +67,17 @@
             <!-- START NEWS -->
             <h2><a name="News"></a>News</h2>
 
-            <p><i><b>May 20th, 2013: Small Device C Compiler 3.3.0 released.</b></i></p>
-            <p>A new release of SDCC, the portable optimizing compiler for 8051, DS390, Z80, Z180, Rabbit 2000, HC08 and PIC microprocessors
-              is now available (<a href="http://sdcc.sourceforge.net" target="_new">http://sdcc.sourceforge.net</a>). Sources, documentation
-              and binaries compiled for x86 Linux, x86 and x64 MS Windows and x86 and PPC Mac OS X are available. </p>
-            <p>SDCC 3.3.0 Feature List:</p>
-            <ul>
-              <li>Many small improvements in code generation for the z80-related ports - merged smallopts branch</li>
-              <li>lospre (currently enabled for z80-related and hc08-related ports only) - merged lospre branch</li>
-              <li>More efficient initialization of globals in z80, z180, r2k and r3ka ports.</li>
-              <li>Inclusion of tests from the gcc test suite into the sdcc regression test suite led to many bugs being found and fixed.</li>
-              <li>Split sdas390 from sdas8051</li>
-              <li>Merged big parts of ASxxxx v5 into sdas</li>
-              <li>New pic devices (synchronization with MPLABX 1.60). (Except for very old MCU-s.)</li>
-              <li>New script which disassembles those hex files, in which MCS51 code there is. (mcs51-disasm.pl)</li>
-              <li>Added the PIC16F1788 and PIC16F1789 devices.</li>
-              <li>C11 _Alignof operator.</li>
-              <li>C11 _Alignas alignment specifier.</li>
-              <li>C11 _Static_Assert static assertion.</li>
-            </ul>
-            <p>Numerous feature requests and bug fixes are included as well.</p>
-            <p>You can download the release from:<br />
-              <a href="https://sourceforge.net/projects/sdcc/files/" target="_new">https://sourceforge.net/projects/sdcc/files/</a></p>
+            <p><i><b>March 27th, 2014: SDCC 3.4.0 RC2 released.</b></i></p>
+            <p>SDCC 3.4.0 Release Candidate 2 source, doc and binary packages for x86 Linux,
+              32 bit Windows, 64 bit Windows and universal Mac OS X are available in corresponding folders at:
+              <a href="http://sourceforge.net/projects/sdcc/files/">
+              http://sourceforge.net/projects/sdcc/files/</a>.</p>
+
+            <p><i><b>March 16th, 2014: SDCC 3.4.0 RC1 released.</b></i></p>
+            <p>SDCC 3.4.0 Release Candidate 1 source, doc and binary packages for x86 Linux,
+              32 bit Windows and universal Mac OS X are available in corresponding folders at:
+              <a href="http://sourceforge.net/projects/sdcc/files/">
+              http://sourceforge.net/projects/sdcc/files/</a>.</p>
 
             <!-- END NEWS -->
 
@@ -242,6 +231,29 @@
             <!-- START PAST_NEWS -->
 
             <h2><a name="Past_news"></a>Past news</h2>
+
+            <p><i><b>May 20th, 2013: Small Device C Compiler 3.3.0 released.</b></i></p>
+            <p>A new release of SDCC, the portable optimizing compiler for 8051, DS390, Z80, Z180, Rabbit 2000, HC08 and PIC microprocessors
+              is now available (<a href="http://sdcc.sourceforge.net" target="_new">http://sdcc.sourceforge.net</a>). Sources, documentation
+              and binaries compiled for x86 Linux, x86 and x64 MS Windows and x86 and PPC Mac OS X are available. </p>
+            <p>SDCC 3.3.0 Feature List:</p>
+            <ul>
+              <li>Many small improvements in code generation for the z80-related ports - merged smallopts branch</li>
+              <li>lospre (currently enabled for z80-related and hc08-related ports only) - merged lospre branch</li>
+              <li>More efficient initialization of globals in z80, z180, r2k and r3ka ports.</li>
+              <li>Inclusion of tests from the gcc test suite into the sdcc regression test suite led to many bugs being found and fixed.</li>
+              <li>Split sdas390 from sdas8051</li>
+              <li>Merged big parts of ASxxxx v5 into sdas</li>
+              <li>New pic devices (synchronization with MPLABX 1.60). (Except for very old MCU-s.)</li>
+              <li>New script which disassembles those hex files, in which MCS51 code there is. (mcs51-disasm.pl)</li>
+              <li>Added the PIC16F1788 and PIC16F1789 devices.</li>
+              <li>C11 _Alignof operator.</li>
+              <li>C11 _Alignas alignment specifier.</li>
+              <li>C11 _Static_Assert static assertion.</li>
+            </ul>
+            <p>Numerous feature requests and bug fixes are included as well.</p>
+            <p>You can download the release from:<br />
+              <a href="https://sourceforge.net/projects/sdcc/files/" target="_new">https://sourceforge.net/projects/sdcc/files/</a></p>
 
             <p><i><b>May 12th, 2013: SDCC 3.3.0 RC3 released.</b></i></p>
             <p>SDCC 3.3.0 Release Candidate 3 source, doc and binary packages for x86 Linux,
